# disiot

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run_test_pair.sh
include/: client.h  connection.h  err_codes.h  logger.h  message.h  server.h
src/: client.c  connection.c  main.c  message.c  server.c
